# pgPy

./: README.md  pgPy.py  pyproject.toml
src/pgPy/: pgPy.py
